--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,8 @@
         <div class="pantalla">0</div>
         <button id="c" class="btn">C</button>
         <button id="borrar" class="btn">←</button>
+        <button class="btn">/</button>
+        <button class="btn">*</button>
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
